2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-02-19      Ralf Corsepius <corsepiu@faw.uni-ulm.de:

        * clock/Makefile.am: Apply include_*HEADERS instead of H_FILES.

2000-11-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use ... instead of RTEMS_TOPdir in ACLOCAL_AMFLAGS.

2000-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Switch to ACLOCAL_AMFLAGS = -I $(RTEMS_TOPdir)/aclocal.

2000-10-26	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: ACLOCAL_AMFLAGS= -I $(RTEMS_TOPdir)/macros.
        Switch to GNU canonicalization.

2000-10-18	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: Corrected comment.

2000-10-18	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c: Removed commented out include of bsp.h.
	* timer/timer.c: Removed commented out include of bsp.h.

2000-09-25	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c: Removed include of <bsp.h>.  Also switch to
	macros to get configuration data.
	* timer/timer.c: Removed include of <bsp.h>.  Fixed comment 
	that said 4650 (a mips part).

2000-09-22	Joel Sherrill <joel@OARcorp.com>

	*  clock/clock.S: Commented out non-GNU assembly.

2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am, timer/Makefile.am: Include compile.am

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.