@@ -8,7 +8,7 @@ PGM = $(ARCH)/timer.rel
 # NOTE: timerisr is normally an assembly file!!!
 
 C_FILES = timer.c timerisr.c
-C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
+C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
 
 OBJS = $(C_O_FILES)
 
